# c-engine

./: .gitmodules  CMakeLists.txt
docs/: lua_api.md
src/: app_state.h  arg.h  audio.c  audio.h  callbacks.h  definitions.h  engine.c  engine.h  errors.h  filesystem.c  filesystem.h  gui.c  gui.h  hashmap.c  hashmap.h  input.c  input.h  log.c  log.h  main.c  math.c  math.h  ref.h  rendering.c  rendering.h  scene.c  scene.h  serialization.c  serialization.h  string.c  string.h  transform.c  transform.h  util.c  util.h  viewport.c  viewport.h  win32_file_wrapper.h  win32_getopt.h  win32_stdlib.h
src/actors/: actor.c  actor.h  editor_actor.c  editor_actor.h  editor_actor_helper_funcs.c  editor_actor_helper_funcs.h  lua_script.c  lua_script.h  script.c  script.h  test_actor.c  test_actor.h  tilemap_actor.c  tilemap_actor.h  viewport_actor.c  viewport_actor.h
src/structures/: hashmap.c  list.c  list.h  stack.c  stack.h
src/tests/: serialization_tests.h  test_suite.c  test_suite.h
